<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>GraphWindow</class>
 <widget class="QWidget" name="GraphWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>497</width>
    <height>509</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <property name="styleSheet">
   <string notr="true">QWidget{
color: rgb(255, 224, 255);
background-color: rgb(255, 224, 244);
}
background color: rgb(255, 224, 244);</string>
  </property>
  <widget class="QCustomPlot" name="widget" native="true">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>40</y>
     <width>496</width>
     <height>401</height>
    </rect>
   </property>
   <property name="statusTip">
    <string/>
   </property>
   <property name="styleSheet">
    <string notr="true">CustomWidget {
border: 1px solid;
border-radius:30px;
background-color: rgb(0, 255, 255);
padding: 5px;
}</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="its_x_min">
   <property name="geometry">
    <rect>
     <x>1</x>
     <y>478</y>
     <width>125</width>
     <height>30</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QLineEdit {
qproperty-alignment: 'AlignVCenter | AlignHCenter';
background-color: rgb(255, 224, 244);

color: rgb(227,5,173);
}</string>
   </property>
  </widget>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>1</x>
     <y>447</y>
     <width>125</width>
     <height>30</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QLabel {
  qproperty-alignment: 'AlignVCenter | AlignHCenter';
background-color: rgb(255, 224, 244);
  border: 2px solid rgb(227,5,173);
color: rgb(227,5,173);
}

background-color : white;</string>
   </property>
   <property name="text">
    <string>X MIN</string>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
  </widget>
  <widget class="QLabel" name="label_2">
   <property name="geometry">
    <rect>
     <x>124</x>
     <y>447</y>
     <width>125</width>
     <height>30</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QLabel {
  qproperty-alignment: 'AlignVCenter | AlignHCenter';
background-color: rgb(255, 224, 244);
  border: 2px solid rgb(227,5,173);
color: rgb(227,5,173);
}

background-color : white;</string>
   </property>
   <property name="text">
    <string>X MAX</string>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
  </widget>
  <widget class="QLineEdit" name="its_x_max">
   <property name="geometry">
    <rect>
     <x>124</x>
     <y>478</y>
     <width>125</width>
     <height>30</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QLineEdit {
qproperty-alignment: 'AlignVCenter | AlignHCenter';
background-color: rgb(255, 224, 244);

color: rgb(227,5,173);
}</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_3">
   <property name="geometry">
    <rect>
     <x>247</x>
     <y>447</y>
     <width>125</width>
     <height>30</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QLabel {
  qproperty-alignment: 'AlignVCenter | AlignHCenter';
background-color: rgb(255, 224, 244);
  border: 2px solid rgb(227,5,173);
color: rgb(227,5,173);
}

background-color : white;</string>
   </property>
   <property name="text">
    <string>X RANGE</string>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
  </widget>
  <widget class="QLabel" name="label_4">
   <property name="geometry">
    <rect>
     <x>370</x>
     <y>447</y>
     <width>125</width>
     <height>30</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QLabel {
  qproperty-alignment: 'AlignVCenter | AlignHCenter';
background-color: rgb(255, 224, 244);
  border: 2px solid rgb(227,5,173);
color: rgb(227,5,173);
}

background-color : white;</string>
   </property>
   <property name="text">
    <string>Y RANGE</string>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
  </widget>
  <widget class="QLineEdit" name="its_x_range">
   <property name="geometry">
    <rect>
     <x>247</x>
     <y>478</y>
     <width>125</width>
     <height>30</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QLineEdit {
qproperty-alignment: 'AlignVCenter | AlignHCenter';
background-color: rgb(255, 224, 244);

color: rgb(227,5,173);
}</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="its_y_range">
   <property name="geometry">
    <rect>
     <x>370</x>
     <y>478</y>
     <width>125</width>
     <height>30</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QLineEdit {
qproperty-alignment: 'AlignVCenter | AlignHCenter';
background-color: rgb(255, 224, 244);

color: rgb(227,5,173);
}</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButton_graph">
   <property name="geometry">
    <rect>
     <x>128</x>
     <y>10</y>
     <width>261</width>
     <height>32</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QPushButton{
background-color: rgb(242, 154, 244);
border: 2px solid rgb(227,5,173);
border-radius: 16px;  

color: rgb(227,5,173);
}</string>
   </property>
   <property name="text">
    <string>Draw</string>
   </property>
  </widget>
 </widget>
 <customwidgets>
  <customwidget>
   <class>QCustomPlot</class>
   <extends>QWidget</extends>
   <header location="global">qcustomplot.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
